main.css
 :root {
   --white: #ddd;
   --black: #111;
   --sand: #ede0d4;
   --lightTan: #e6ccb2;
   --tan: #ddb892;
   --lightBrown: #b08968;
   --brown: #7f5539;
   --chocolate: #9c6644;
   --transition: all 0.5s ease;
 }

 * {
   font-family: 'Playfair Display', serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }

 body {
   line-height: 1.6;
   background: var(--lightTan);
 }

 img {
   width: 100%;
   display: block;
 }

 ul {
   padding-left: 0;
 }

 ul li {
   list-style: none;
 }

 a {
   text-decoration: none;
   color: #000;
 }

 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
 p {
   margin: 15px, 0;
 }

 /* functionality classes */

 .flex {
   display: flex;
   justify-content: center;
   align-items: center;
 }

 .container {
   width: 90vw;
   margin: 0 auto;
 }

 .btn {
   background: var(--brown);
   border: none;
   display: block;
   width: 150px;
   text-align: center;
   color: var(--brown);
   text-transform: uppercase;
   background: transparent;
   font-size: 15px;
   padding: 12px;
   border: 2px solid var(--brown);
   border-radius: 25px;
   margin: 15px 0;
   transition: var(--transition);
 }

 .btn:hover {
   background: var(--brown);
   color: var(--white);
   border: 2px solid var(--brown);
 }

 .btn-honeybook {
  background: var(--brown);
  border: none;
  border-radius: 25px;
  width: 100px;
  padding: 10px;
  margin: 3px 0;
  font-size: 15px;
  color: var(--sand);
  transition: var(--transition);
 }

 .btn-honeybook:hover {
  background: var(--brown);
  color: #fff;
 }

 .active {
   color: var(--lightBrown) !important;
 }

 /* end of functionality */

 /* header styling */

 .header {
   min-height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("images/emma_profile.jpg") center/cover no-repeat;
   color: #fff;
   background-position: center top -220px;
   /* Adjust the value of 100px to move the image down by desired amount */
 }

 .bold {
  font-weight: bold;
 }

 .top-nav a {
   color: #fff;
 }

 .brand-and-navBtn {
   background: var(--lightBrown);
   position: relative;
   z-index: 999;
   height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: 500;
   font-size: 24px;
   padding: 15px 25px;
   color: var(--white);
   /* background-color: rgba(255, 255, 255, 0.5); 50% transparent white */
 }

 .brand-name {
   letter-spacing: 3px;
   cursor: pointer;
 }

 .navBtn {
   width: 40px;
   height: 40px;
   border: 1px solid var(--white);
   cursor: pointer;
 }

 .navBtn:hover {
   background: var(--brown);
   /* background: var(--pink);  */
   color: #fff;
   transition: var(--transition);
   border: var(--lightBrown);
 }

 .top-nav {
   background: var(--brown);
   transform: translateY(-600px);
   transition: var(--transition);
 }

 .showNav {
   transform: translateY(0);
 }

 /* .search-icon {
   display: none;
 } */

 .top-nav ul li {
   padding: 10px 0;
 }

 .top-nav ul a {
   position: relative;
   font-weight: 500;
   font-size: 18px;
   text-align: center;
   display: block;
 }

 .top-nav ul a::after {
   content: "";
   height: 2px;
   background: #ebd1d1;
   position: absolute;
   bottom: -5px;
   left: 50%;
   transform: translate(-50%);
   width: 0;
   transition: var(--transition);
 }

 .top-nav ul a:hover::after {
   width: 100px;
 }

 .about {
   margin-top: -160px;
 }

 /* .about-content img {
  width: 140px;
  height: 140px;
  border-radius: 50%;
} */

 /* .about-img {
  background: #fff;
  width: 150px;
  height: 150px;
  margin: 0 auto;
  border-radius: 50%;
} */

 .about-content h2 {
   font-size: 48px;
   text-align: center;
   /* width: 300px; */
   margin-top: 430px;
   color: var(--lightTan);
 }

 .about-content h3 {
   color: var(--lightTan);
   font-size: 30px;
   font-weight: 100;
   background: rgba(255, 255, 255, 0.1);
   width: 400px;
   margin: 35px auto;
   text-align: center;
 }

 .social-icons {
   width: 350px;
   margin: 30px auto 0 auto;
   padding-bottom: 30px;
   display: flex;
   justify-content: center;
   /* align-items: center; */
 }

 .social-icons ul a {
   color: #fff;
   font-size: 30px;
   display: block;
   width: 50px;
   height: 50px;
   border: 1px solid #fff;
   /* border-radius: 50%;  */
   display: flex;
   justify-content: center;
   align-items: center;
   transition: var(--transition);
 }

 .social-icons ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 350px;
 }

 .social-icons ul a:hover {
   background: var(--chocolate);
   border-color: var(--chocolate);
 }

 /* end of header */

 /* MAIN BODY */

 /* section 1 */

 .section-one {
   margin: 40px 0;
   min-height: 100vh;
 }

 .sec-one-left {
   height: 100vh;
   background: url(images/couple-stock-9.jpg) center/cover no-repeat;
   box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
   border-radius: 5px;
 }

 .sec-one-left div {
   color: var(--white);
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding: 30px;
 }

 .sec-one-left div h3 {
   font-size: 28px;
   opacity: 0.9;
 }

 .sec-one-left div p {
   font-weight: 300;
   opacity: 0.8;
 }

 .sec-one-right h3 {
   color: var(--lightBrown);
 }

 .sec-one-right>h3 {
   text-align: center;
 }

 .sec-one-right p {
   opacity: 0.9;
   font-weight: 300;
 }

 .work-content {
   margin: 50px 0;
 }

 .work-imgs {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 20px;
 }

 .work-img-1 {
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
     url(images/couple-stock-6.JPG) center/cover no-repeat;
   /* height: 600px; */
   height: 400px;
   transition: var(--transition);
 }
/* ... */

